unpackaged/main/default/objects/Custom_Discount__c/Custom_Discount__c.object-meta.xml
<CustomObject>
    <label>Custom Discount</label>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Discounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>