unpackaged/main/default/objects/Custom_Discount__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Remise appliquée pendant la période définie</description>
    <inlineHelpText>Permet d&#39;appliquer une diminution ou une augmentation du prix en %.
Saisir 1 dans la case revient à appliquer une diminution du prix de 1%.
Saisir -1 dans la case revient à appliquer une augmenation du prix de 1%.</inlineHelpText>
    <label>Discount / Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>