unpackaged/main/default/objects/Custom_Discount__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date de fin de la promotion</description>
    <inlineHelpText>Date de fin de la promotion</inlineHelpText>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>