unpackaged/main/default/objects/Custom_Discount__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date de début de la promotion</description>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>