unpackaged/main/default/objects/Custom_Discount__c/recordTypes/Promotion_Globale.recordType-meta.xml
<RecordType>
    <fullName>Promotion_Globale</fullName>
    <active>true</active>
    <description>Promotion globale à durée limitée.</description>
    <label>Promotion Globale</label>
</RecordType>