unpackaged/main/default/objects/Custom_Discount__c/recordTypes/Promotion_Product.recordType-meta.xml
<RecordType>
    <fullName>Promotion_Product</fullName>
    <active>true</active>
    <description>Promotion pour un produit pour une durée limitée.</description>
    <label>Promotion Produit</label>
</RecordType>